# TinyJSON

./: .gitignore  CMakeLists.txt  README.md
src/: test.c  tiny_json.c  tiny_json.h
